cilium/hubble/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.mykubernetes.com`) && PathPrefix(`/hubble`)
      middlewares:
        - name: hubble-ui-strip
      services:
        - name: hubble-ui
          port: 80
  tls:
    secretName: traefik-dashboard-cert
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hubble-ui-strip
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /hubble
